# engine2d

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md
include/engine/: AnimatedBitmap.h  BitmapShape.h  CircleShape.h  Color.h  Engine.h  Input.h  LineShape.h  Point2D.h  RectangleShape.h  Renderer.h  Shape.h  TriangleShape.h  engine.hpp
src/: SceneManager.cpp  SceneManager.h  main.cpp  test.txt
src/engine/: AnimatedBitmap.cpp  BitmapShape.cpp  CircleShape.cpp  Input.cpp  LineShape.cpp  RectangleShape.cpp  Renderer.cpp  TriangleShape.cpp  engine.cpp
src/scenes/: Scene1.cpp  Scene2.cpp  SnakeGame.cpp
src/scenes/headers/: Scene.h  Scene1.h  Scene2.h  SnakeGame.h
